# luigi-gadd

./: NOTICE  README.md  luigi.cfg  pyproject.toml
.github/workflows/: python-tests.yml
src/luigi_gadd/: __init__.py  auto_rerun_task.py  dynamic.py  multi_target_manager.py
src/luigi_utilities/: __init__.py  auto_rerun_task.py  dynamic.py  multi_target_manager.py
tests/: test_auto_rerun_task.py  test_auto_rerun_task_pick_output.py  test_luigi_utilities.py  test_multi_target_manager.py  test_new_task.py
