[tool.poetry]
name = "luigi-gadd"
version = "0.3.0"
license = "MIT"
description = "Provides additional functionality to make Luigi more flexible"
homepage = "https://github.com/mikelynch/luigi-gadd"
repository = "https://github.com/mikelynch/luigi-gadd"
authors = ["Mike Lynch <me@msl.sh>"]

[tool.poetry.dependencies]
python = "^3.6"
luigi = "^3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6"
mypy = "^0.812"
pytest = "^5.2"
tox = "^3.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37,py38,py39

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run black .
    poetry run isort .
    poetry run mypy src
    poetry run pytest tests/
"""
